--- a/api/package.json
+++ b/api/package.json
@@ -6,9 +6,9 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.13.1",
-    "pg": "5.0.0",
-    "node-uuid": "1.4.7",
+    "express": "~4.17.1",
+    "pg": "6.1.6",
+    "uuid": "8.3.2",
     "morgan": "~1.9.1"
   }
 }
